--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -16,6 +16,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/packages">Packages</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/demo">Demo</a>
+              </li>
               {{!-- <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button"
                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
