--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -27,10 +27,8 @@
   <link rel="stylesheet" href="/css/style.css">
   <!-- own style CSS -->
   <link rel="stylesheet" href="/css/custom.css">
+  <link rel="stylesheet" href="/css/error.css">
 
-  <style>
-
-  </style>
 </head>
 
 <body>
@@ -67,7 +65,7 @@
   <script src="/js/mail-script.js"></script>
   <!-- custom js -->
   <script src="/js/custom.js"></script>
-
+  <script src="/js/myCustom.js"></script>
 </body>
 
 </html>
