--- a/views/userInfo/userInfo.hbs
+++ b/views/userInfo/userInfo.hbs
@@ -39,7 +39,8 @@
         </div>
         <div class="section-top-border">
             <h3 class="mb-30">List of Keys</h3>
-            <a href="/checkcode" style="justify-content: end" class="genric-btn success-border radius">Add new key</a>
+            <a href="/packages/verify" style="justify-content: end" class="genric-btn success-border radius">Add new
+                key</a>
             <div class="progress-table-wrap">
                 <div class="progress-table">
                     <div class="table-head">
