fixx route verify

--- a/views/packages/packages.hbs
+++ b/views/packages/packages.hbs
@@ -6,7 +6,7 @@
         <div class="modal-content text-center">
             <!--Header-->
             <div class="modal-header d-flex justify-content-center">
-                <p class="heading">Be always up to date</p>
+                <p class="heading">Thông báo</p>
             </div>
             <!--Body-->
             <div class="modal-body">
