cập nhật thông báo mua key thành công

--- a/views/packages/packages.hbs
+++ b/views/packages/packages.hbs
@@ -1,22 +1,22 @@
 <!--Modal: modalPush-->
-<div class="modal fade show" id="modalPush" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-    aria-hidden="true" style="display:block">
+<div class="modal fade  {{#if message}}show{{/if}}" id="modalPush" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalLabel" aria-hidden="true" {{#if message}} style="display:block" {{/if}}>
     <div class="modal-dialog modal-notify modal-info" role="document">
         <!--Content-->
         <div class="modal-content text-center">
             <!--Header-->
             <div class="modal-header d-flex justify-content-center">
-                <p class="heading">Thông báo</p>
+                <p class="heading">Message</p>
             </div>
             <!--Body-->
             <div class="modal-body">
                 <i class="fas fa-bell fa-4x animated rotateIn mb-4"></i>
-                <p>Do you want to receive the push notification about the newest posts?</p>
+                <p>{{message}}</p>
             </div>
             <!--Footer-->
             <div class="modal-footer flex-center">
-                <button type="button" class="btn btn-primary">Yes</button>
-                <button type="button" class="closeModalBtn btn btn-primary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn_1"><a href="packages/verify" style="color:white">Yes</a></button>
+                <button type="button" class="closeModalBtn btn btn_1" data-dismiss="modal">Close</button>
             </div>
         </div>
         <!--/.Content-->
@@ -52,8 +52,6 @@
             <div class="col-lg-6">
                 <div class="section_tittle text-center">
                     <h2>Simple Pricing</h2>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalPush">Launch
-                        modal</button>
                 </div>
             </div>
         </div>
