--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -247,5 +247,5 @@ h2[class="userInfo"] {
   top: 150px;
 }
 .modal-header {
-  background: #33b5e5;
+  background: linear-gradient(to left, #00b4ff 0%, #57ddff 51%, #00b4ff 100%);
 }
