--- a/views/checkcode/checkcode.hbs
+++ b/views/checkcode/checkcode.hbs
@@ -8,7 +8,7 @@
             <div class="col-lg-12">
                 <div class="breadcrumb_iner text-center">
                     <div class="breadcrumb_iner_item">
-                        <h2 class="userInfo">Validate Key Code</h2>
+                        <h2 class="userInfo">Validate OTP Code</h2>
                         <form method="POST">
                             <div class="formElement">
 
