--- a/views/userInfo/userInfo.hbs
+++ b/views/userInfo/userInfo.hbs
@@ -56,8 +56,10 @@
 
                         <div class="serial">{{id}}</div>
                         <div class="percentage"><input form="updateform" type="hidden" name="id" value={{value}}>{{value}}</div>
-                        <input form="renewkey" type="hidden" name="id" value={{value}}>
-                        <div class="country" style="justify-content: center">{{name}}</div>
+                        <input form="renewkey" type="hidden" name="idPackage" value={{id_package}}>
+                        <input form="renewkey" type="hidden" name="idKey" value={{value}}>
+
+                        <div class="country" style="justify-content: center">{{name_package}}</div>
                         <div class="country" style="justify-content: center">{{date_expired}}</div>
 
                         <div class="visit">
