--- a/views/packages/packages.hbs
+++ b/views/packages/packages.hbs
@@ -1,5 +1,3 @@
-<<<<<<< HEAD
-=======
 <!--Modal: modalPush-->
 <div class="modal fade  {{#if message}}show{{/if}}" id="modalPush" tabindex="-1" role="dialog"
     aria-labelledby="exampleModalLabel" aria-hidden="true" {{#if message}} style="display:block" {{/if}}>
@@ -27,7 +25,6 @@
 <!--Modal: modalPush-->
 
 
->>>>>>> a7f18affca9d8c20667e9abdb83cd74d0a8eb0c1
 {{>header user=this.user}}
 <!-- banner part start-->
 {{>header user=this.user}}
@@ -54,10 +51,6 @@
             <div class="col-lg-6">
                 <div class="section_tittle text-center">
                     <h2>Simple Pricing</h2>
-<<<<<<< HEAD
-
-=======
->>>>>>> a7f18affca9d8c20667e9abdb83cd74d0a8eb0c1
                 </div>
             </div>
         </div>
@@ -67,17 +60,17 @@
                 <div class="single_pricing_part">
                     <img src="img/icon/feature_icon_3.png" alt="">
                     <p>{{name}}</p>
-                    <h3>{{price}} VND<span>/{{term}}</span></h3>
+                    <h3>{{price}} VND<span>/{{term}} days</span></h3>
                     <ul>
-                        <li>{{term}}</li>
+                        <li>{{term}} days</li>
                         <li>{{limitNumberOfReq}} Request Limit</li>
                         <li>24/7 Support</li>
                     </ul>
-                    <a href="/packages/buy/{{id}}"  class="btn_1">Buy</a>
+                    <a href="/packages/buy/{{id}}" class="btn_1">Buy</a>
                 </div>
             </div>
             {{/each}}
-        </div>  
+        </div>
     </div>
     <img src="img/left_sharp.png" alt="" class="left_shape_1">
     <img src="img/animate_icon/Shape-1.png" alt="" class="feature_icon_1">
