--- a/views/userInfo/userInfo.hbs
+++ b/views/userInfo/userInfo.hbs
@@ -86,7 +86,7 @@
     </div>
 </section>
 <!-- breadcrumb start-->
-<script
+{{!-- <script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
@@ -111,5 +111,5 @@
             },
         });
     });
-</script>
+</script> --}}
 {{>footer}}
