front-end manage & statistic pages

--- a/views/userInfo/userInfo.hbs
+++ b/views/userInfo/userInfo.hbs
@@ -55,7 +55,8 @@
                     <div class="table-row">
 
                         <div class="serial">{{id}}</div>
-                        <div class="percentage"><input form="updateform" type="hidden" name="id" value={{value}}>{{value}}</div>
+                        <div class="percentage"><input form="updateform" type="hidden" name="id"
+                                value={{value}}>{{value}}</div>
                         <input form="renewkey" type="hidden" name="idPackage" value={{id_package}}>
                         <input form="renewkey" type="hidden" name="idKey" value={{id}}>
 
@@ -63,17 +64,17 @@
                         <div class="country" style="justify-content: center">{{date_expired}}</div>
 
                         <div class="visit">
-                            <form id="updateform" method="POST" action='profile/updatekey'>
-                                <button style="justify-content: center"
-                                    class="genric-btn primary-border circle" type="submit">Change</button>
+                            <form id="updateform" method="POST" action='profile/updatekey' style="width:100%">
+                                <button style="justify-content: center" class="genric-btn primary-border circle"
+                                    type="submit">Change</button>
                             </form>
 
                         </div>
 
                         <div class="visit">
                             <form id="renewkey" method="POST" action="profile/renewkey" style="width:100%">
-                                <button style="justify-content: center"
-                                    class="genric-btn success-border circle" type="submit">Renew</button>
+                                <button style="justify-content: center" class="genric-btn success-border circle"
+                                    type="submit">Renew</button>
                             </form>
                         </div>
 
