--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -28,7 +28,8 @@
   <!-- own style CSS -->
   <link rel="stylesheet" href="/css/custom.css">
   <link rel="stylesheet" href="/css/error.css">
-
+  {{!-- chart --}}
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
 </head>
 
 <body>
@@ -66,6 +67,7 @@
   <!-- custom js -->
   <script src="/js/custom.js"></script>
   <script src="/js/myCustom.js"></script>
+
 </body>
 
 </html>
