--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -249,7 +249,11 @@ h2[class="userInfo"] {
 .modal-header {
   background: linear-gradient(to left, #00b4ff 0%, #57ddff 51%, #00b4ff 100%);
 }
-
 .chart {
-  height: 300px !important;
+  height: 400px !important;
+}
+.yearOptions,
+.monthOptions {
+  margin-right: 2px;
+  width: 100px;
 }
