thêm button phân trang

--- a/views/statistic/user.hbs
+++ b/views/statistic/user.hbs
@@ -54,6 +54,8 @@
                                 </div>
                             </div>
                         </div>
+                        <button class="getRevenueByYearBtn genric-btn success-border"><a>trang1</a></button>
+                        <button class="getRevenueByYearBtn genric-btn success-border"><a>trang2</a></button>
                     </div>
                 </div>
             </div>
