--- a/views/statistic/userdetail.hbs
+++ b/views/statistic/userdetail.hbs
@@ -77,6 +77,8 @@
                                 </div>
 
                             </div>
+                            <button class="getRevenueByYearBtn genric-btn success-border"><a>trang1</a></button>
+                            <button class="getRevenueByYearBtn genric-btn success-border"><a>trang2</a></button>
                         </div>
                     </div>
                 </div>
