--- a/views/statistic/user.hbs
+++ b/views/statistic/user.hbs
@@ -54,8 +54,9 @@
                                 </div>
                             </div>
                         </div>
-                        <button class="getRevenueByYearBtn genric-btn success-border"><a>trang1</a></button>
-                        <button class="getRevenueByYearBtn genric-btn success-border"><a>trang2</a></button>
+                        {{#each pages}}
+                        <a class="getRevenueByYearBtn genric-btn success-border" href="/admin/usermanage/page={{this.id}}">{{this.id}}</a>
+                        {{/each}}
                     </div>
                 </div>
             </div>
