--- a/views/statistic/accessNumber.hbs
+++ b/views/statistic/accessNumber.hbs
@@ -34,12 +34,20 @@
                             <button class="getAccessNumberBtn genric-btn success-border"><a
                                     class="getAccessNumberLink">GET</a></button>
                         </div>
-
                     </div>
+                        {{#each dataAccess}}
+                        <span style="color: white;" id={{id}} name={{id}}>{{value}}</span>
+                        {{/each}}
                     <canvas id="accessNumberChart"></canvas>
+                    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
                     <script>
                         //đổ data ở đây !
-                        let data = [12, 19, 3, 5, 2, 3, 12, 19, 3, 5, 2, 3];
+                        let data = [0,0,0,0,0,0,0,0,0,0,0,0];
+                        data = data.map((elem, index) => {
+                            return (parseInt($(`#${index+1}`).html()) || 0);
+                        });
+                        console.log('data----', data);
+                        console.log('vaalll',$("#10").html());
                         var ctx = document.getElementById("accessNumberChart");
                         var accessNumberChart = new Chart(ctx, {
                             type: 'line',
