Fix bug wrong file type (#10)
* test

* test

* add eslint

* a

* add es6 eslint

* test eslint

* a

* f

* f

* fix-bug-sign-up

* fix bug wrong file type

--- a/views/demo/demo.hbs
+++ b/views/demo/demo.hbs
@@ -1,3 +1,27 @@
+
+<!--Modal: modalPush-->
+<div class="modal fade  {{#if message}}show{{/if}}" id="modalPush" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalLabel" aria-hidden="true" {{#if message}} style="display:block" {{/if}}>
+    <div class="modal-dialog modal-notify modal-info" role="document">
+        <!--Content-->
+        <div class="modal-content text-center">
+            <!--Header-->
+            <div class="modal-header d-flex justify-content-center">
+                <p class="heading">Message</p>
+            </div>
+            <!--Body-->
+            <div class="modal-body">
+                <i class="fas fa-bell fa-4x animated rotateIn mb-4"></i>
+                <p>{{message}}</p>
+            </div>
+            <!--Footer-->
+            <div class="modal-footer flex-center">
+                <button type="button" class="closeModalBtn btn btn_1" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
 {{>header user=this.user}}
 <!-- banner part start-->
 {{>header user=this.user}}
