update change,renew,change valid user's key

--- a/views/statistic/userdetail.hbs
+++ b/views/statistic/userdetail.hbs
@@ -1,3 +1,28 @@
+<!--Modal: modalPush-->
+<div class="modal fade  {{#if message}}show{{/if}}" id="modalPush" tabindex="-1" role="dialog"
+    aria-labelledby="exampleModalLabel" aria-hidden="true" {{#if message}} style="display:block" {{/if}}>
+    <div class="modal-dialog modal-notify modal-info" role="document">
+        <!--Content-->
+        <div class="modal-content text-center">
+            <!--Header-->
+            <div class="modal-header d-flex justify-content-center">
+                <p class="heading">Message</p>
+            </div>
+            <!--Body-->
+            <div class="modal-body">
+                <i class="fas fa-bell fa-4x animated rotateIn mb-4"></i>
+                <p>{{message}}</p>
+            </div>
+            <!--Footer-->
+            <div class="modal-footer flex-center">
+                <button type="button" class="btn btn_1"><a style="color:white">Yes</a></button>
+                <button type="button" class="closeModalBtn btn btn_1" data-dismiss="modal">Close</button>
+            </div>
+        </div>
+        <!--/.Content-->
+    </div>
+</div>
+<!--Modal: modalPush-->
 {{>adminHeader user=this.user}}
 <!-- banner part start-->
 {{>adminHeader user=this.user}}
@@ -43,37 +68,38 @@
                                 {{!-- đổ data ở đây --}}
                                 <div class="table-row">
 
-                                    <div class="serial">{{id}}</div>
-                                    <div class="percentage"><input form="updateform" type="hidden" name="id"
+                                    <div class="serial">{{@index}}</div>
+                                    <div class="percentage"><input form="changekey{{id}}" type="hidden" name="id"
                                             value={{value}}>{{value}}</div>
-                                    <input form="renewkey" type="hidden" name="idPackage" value={{id_package}}>
-                                    <input form="renewkey" type="hidden" name="idKey" value={{id}}>
+                                    <input form="renewkey{{id}}" type="hidden" name="idPackage" value={{id_package}}>
+                                    <input form="renewkey{{id}}" type="hidden" name="idKey" value={{id}}>
+                                    <input form="validkey{{id}}" type="hidden" name="idKey" value={{id}}>
 
                                     <div class="country" style="justify-content: center">{{name_package}}</div>
                                     <div class="country" style="justify-content: center">{{date_expired}}</div>
 
                                     <div class="visit">
-                                        <form id="updateform{{id}}" method="POST" action='changekey' style="width:100%">
+                                        <form id='changekey{{id}}' method="POST" action='/admin/userdetail/changekey'
+                                            style="width:100%">
                                             <button style="justify-content: center"
                                                 class="genric-btn primary-border circle" type="submit">Change</button>
                                         </form>
 
                                     </div>
 
-
-
                                     <div class="visit">
-                                        <form id="renewkey{{id}}" method="POST" action="/profile/renewkey"
+                                        <form id="renewkey{{id}}" method="POST" action="/admin/userdetail/renewkey"
                                             style="width:100%">
                                             <button style="justify-content: center"
                                                 class="genric-btn success-border circle" type="submit">Renew</button>
                                         </form>
                                     </div>
                                     <div class="visit">
-                                        <form id='updateform{{id}}' method="POST" action='/profile/updatekey'
+
+                                        <form id='validkey{{id}}' method="POST" action='/admin/userdetail/validkey'
                                             style="width:100%">
                                             <button style="justify-content: center"
-                                                class="genric-btn primary-border circle" type="submit">Disable</button>
+                                                class="genric-btn primary-border circle" type="submit">{{status}}</button>
                                         </form>
 
                                     </div>
