fix handle message when click YES at /checkcode

--- a/views/statistic/userdetail.hbs
+++ b/views/statistic/userdetail.hbs
@@ -15,7 +15,7 @@
             </div>
             <!--Footer-->
             <div class="modal-footer flex-center">
-                <button type="button" class="btn btn_1"><a style="color:white">Yes</a></button>
+                {{!-- <button type="button" class="btn btn_1"><a style="color:white">Yes</a></button> --}}
                 <button type="button" class="closeModalBtn btn btn_1" data-dismiss="modal">Close</button>
             </div>
         </div>
