--- a/views/statistic/revenue.hbs
+++ b/views/statistic/revenue.hbs
@@ -29,16 +29,31 @@
                         <div class="single-element-widget mt-30">
 
                             <div class="default-select" id="default-select_2" style="display:flex">
-                                <select class="yearOptions" id="revenueByYear-YearOptions"></select>
+                                <form method="GET" id="revenue" action="/admin/revenuemanage">
+                                <select class="yearOptions" name="revenueByYear" id="revenueByYear-YearOptions"></select>
                                 <button class="getRevenueByYearBtn genric-btn success-border"><a
-                                        class="getRevenueByYearLink">GET</a></button>
+                                        class="getRevenueByYearLink" type="submit">GET</a></button>
+                                </form>
                             </div>
                         </div>
+                        <span style="color: white;" id='leng' name='leng'>{{numberPackage}}</span>
+                        {{#each total}}
+                        <span style="color: white;" id={{id}} name={{id}}>{{totalSum}}</span>
+                        {{/each}}
+                        {{#each byMonth}}
+                        <span style="color: white;" id={{id}} name={{id}}>{{total}}</span>
+                        {{/each}}
+                        {{#each byMonth}}
+                        <span style="color: white;" id={{idName}} name={{idName}}>{{name_package}}</span>
+                        {{/each}}
                         <canvas id="revenueByYear"></canvas>
+                        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
                         <script>
                             //đổ data ở đây !
                             let revenueData1 = [12, 19, 3, 5, 2, 3, 12, 19, 3, 5, 2, 3];
-
+                            revenueData1 = revenueData1.map((elem, index) => {
+                            return (parseInt($(`#${index+1}`).html()) || 0);
+                            });
                             var ctx = document.getElementById("revenueByYear");
                             var revenueByYearChart = new Chart(ctx, {
                                 type: 'line',
@@ -76,24 +91,31 @@
                         <div class="single-element-widget mt-30">
 
                             <div class="default-select" id="default-select_2" style="display:flex">
-                                <select class="yearOptions" id="revenueByMonth-YearOptions"></select>
-                                <select class="monthOptions" id="revenueByMonth-MonthOptions"></select>
-                                <button class="getRevenueByMonthBtn genric-btn success-border"><a
-                                        class="getRevenueByMonthLink">GET</a></button>
+                                <select form="revenue" class="yearOptions"  name="yearByMonth" id="revenueByMonth-YearOptions"></select>
+                                <select form="revenue" class="monthOptions" name="monthByMonth" id="monthByMonth-MonthOptions"></select>
+                                <button form="revenue" class="getRevenueByMonthBtn genric-btn success-border"><a
+                                        class="getRevenueByMonthLink" type="submit">GET</a></button>
                             </div>
 
                         </div>
-
                         <canvas id="revenueByMonth"></canvas>
                         <script>
-                            //đổ data ở đây !
-                            let package = ["Month Basic", "Month Advance", "Year Basic", "Year Advance"]
-                            let revenueData2 = [12222, 12229, 30000, 50000];
+                            {{!-- //đổ data ở đây ! --}}
+                            let packageData = Array(parseInt($(`#leng`).html())).fill('');
+                            packageData = packageData.map((elem, index) => {
+                                return ($(`#${index+1000}`).html()) || '';
+                            });
+                            console.log('packageData------', packageData);
+                            let revenueData2 = Array(parseInt($(`#leng`).html())).fill(0);
+                            revenueData2 = revenueData2.map((elem,index) => {
+                                return (parseInt($(`#${index+100}`).html()) || 0);
+                            });
+                            console.log('revenueData2-----', revenueData2);
                             var ctxx = document.getElementById("revenueByMonth");
                             var revenueByMonthChart = new Chart(ctxx, {
                                 type: 'bar',
                                 data: {
-                                    labels: package,
+                                    labels: packageData,
                                     datasets: [{
                                         label: "",
                                         data: revenueData2,
